--- a/src/app/mainroot/landingpage/landingpage.component.scss
+++ b/src/app/mainroot/landingpage/landingpage.component.scss
@@ -1,7 +1,12 @@
 
-* {
-  padding: 0;
-  margin: 0;
+.toptext{
+  color: white;
+  font-size: 55px;
+}
+
+.contenttop{
+  padding-top: 15vh;
+  margin-left: 20vw;
 }
 
 .fa {
@@ -9,210 +14,111 @@
 }
 
 .topimage{
+  margin-top: 10vh;
   position: relative;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("/assets/images/landingpage/landing.jpg");
   background-size: cover;
   background-position: center center;
-  height: 95vh;
+  height: 75vh;
 }
 
-.pushshim{
+.socialdiv{
+  cursor: pointer;
   position: relative;
-  top:  13vh;
+  right: 6vw;
+  bottom: 7vh;
+  display: inline-block;
+  width: 3vw;
+  padding-left: .5vw;
+  margin-left: .25vw;
+  margin-right: .25vw;
+  background-color: #00b3ee;
 }
+fa{
+  display: block;
+  color: white;
+  margin: 0 auto;
+}
+
 select{
-  background-color: black;
+  background: transparent;
   border: solid 4px white;
   width: 200px;
   height: 50px;
   font-size: 18px;
 }
-
-#second-pane {
-  height: 70vh;
-  //background-color: rgba(180, 180, 180, 0.2);
-  @media (max-width:991px) {
-    height: 100vh;
-  }
+option{
+  background-color: #00b3ee;
 }
 
-#step1 {
-  background-color: rgba(180, 180, 180, 0.2);
-
-
-  @media (max-width:991px) {
-    background-color: rgba(180, 180, 180, 0.2);
-
-  }
+#second-pane{
+  height: 60vh;
 }
 
-#step2 {
-  background-color: white;
-
-
-  @media (max-width:991px) {
-
-    background-color: white;
-  }
+.secondtextdiv{
+  padding-left: 13vw;
+  padding-bottom: 5vw;
 }
 
-.clipshadow{
-  background-color: rgba(180, 180, 180, 0.2);
+#secondpanetext{
+  font-size: 2.1rem;
 }
 
-#step3 {
-  background-color: rgba(180, 180, 180, 0.2);
+.underline{
+  border-bottom: solid 3px black;
+  font-size: 1.5rem;
+  padding-bottom: 2vh;
 }
 
-
-@keyframes MoveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px);
-  }
-
-  80% {
-    transform: translateX(20px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-
+.hiwtitle{
+  padding-left : 7vw;
+  font-size: 2.5rem;
 }
 
-@keyframes MoveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100px);
-  }
+.hiwbox{
+  padding-left: 7vw;
+  padding-right: 7vw;
+}
 
-  80% {
-    transform: translateX(-20px);
-  }
+.hiwtext{
+  padding-top: 2vh;
+  font-size: 1rem;
+}
 
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
+#third-pane{
+  padding-top: 5vh;
+  background-color: lightgray;
+  padding-bottom: 5vh;
+}
+
+.forthheader{
+  padding-left: 14vw;
+}
+
+input {
+  width: 100%;
+  margin-bottom: 1vw;
+}
+
+.formdiv{
+  margin: 0 auto;
+}
+
+.venuesubmit{
+  width: 100%;
+  cursor: pointer;
+  height: 6vh;
+  background-color: #00b3ee;
+  border: solid 1px #00b3ee;
+  color: white;
+  font-size: 1.3rem;
 
 }
 
-/* when hover, move up a bit */
-#icon:hover {
-  transform: translateY(3px);
-  /* first x-aix offset, second y-aix offset, third bliry*/
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+.signupcompelete{
+  padding-top: 15vh;
+  padding-bottom: 15vh;
 }
 
-/* when click, move donw a bit */
-#icon:active {
-  transform: translateY(5px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-
-.main-text-line {
-  animation: MoveInLeft 1s ease-out;
-}
-
-.sub-text-line {
-  animation: MoveInRight 1s ease-out;
-}
-
-.step-header {
-  font-size: 30px;
-}
-
-.step-sub {
-  margin: 10px 20px;
-  font-size: 20px;
-}
-
-#user-signup-pane {
-  position: relative;
-  height: 70vh;
-  background-image: linear-gradient( rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("/assets/images/landingpage/signupimg.png");
-  background-size: cover;
-  background-position: center;
-
-  @media (max-width:991px) {
-    position: relative;
-    height: 100vh;
-    background-color: rgba(180, 180, 180, 0.2);
-  }
-}
-
-.signup-container {
-  height: 90%;
-  width: 80%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  text-align: center;
-
-  @media (max-width: 400px) {
-    height: 50%;
-    width: 80%;
-    position: absolute;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-  }
-
-  .title {
-    display: block;
-    font-size: 40px;
-  }
-
-  .sub-info {
-    margin: 50px auto;
-    display: block;
-    font-size: 21px;
-    width: 40rem;
-  }
-
-  .link-style {
-    text-decoration: underline;
-  }
-}
-
-.btn-container {
-  a {
-    color: rgb(69,147,192);
-  }
-  .button:link{
-    display: block;
-    padding: 10px;
-    border: rgb(69,147,192) solid 2px;
-    width: 250px;
-  }
-
-  .button:hover {
-    transform: translateY(3px);
-  }
-}
-
-
-#venu-signup-pane {
-  position: relative;
-  height: 70vh;
-  background-color: rgba(180, 180, 180, 0.2);
-
-  .title-gray{
-    color: #fff;
-  }
-
-  .btn-gray {
-    border: #fff solid 2px;
-  }
-
-  @media (max-width: 600px){
-    height: 100vh;
-  }
-}
 
 
