--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-4 hiwbox">
+        <div class="col-md-4 col-sm-12 hiwbox">
           <div class="col-12 underline">
             1. BROWSE
           </div>
@@ -68,7 +68,7 @@
             Browse more than 100 venues to pick the perfect spot for your event.
           </div>
         </div>
-        <div class="col-4 hiwbox">
+        <div class="col-md-4 col-sm-12 hiwbox">
           <div class="col-12 underline">
             2. CONTACT
           </div>
@@ -76,7 +76,7 @@
             Seamlessly contact host for availability.
           </div>
         </div>
-        <div class="col-4 hiwbox">
+        <div class="col-md-4 col-sm-12 hiwbox">
           <div class="col-12 underline">
             3. BOOK
           </div>
