--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 d-sm-none">
     <div class="float-right">
       <div class="socialdiv">
         <a href="www.instagram.com/suitsandtables/" target="_blank">
