--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -145,7 +145,7 @@
           </div>
           <div class="col-6">
             <select id="inputState"
-                    class="form-control"
+                    class="form-control venuestateselect"
                     name="venuestateselect"
                     required
                     ngModel>
