--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.scss
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.scss
@@ -26,6 +26,13 @@ $bg-white: white;
   }
 }
 
+.acfbutton{
+  margin-top: 1vh;
+  width: 100%;
+  font-size: #00b3ee;
+  border-color: #00b3ee;
+
+}
 
 #venue-search {
   border-bottom: rgb(189,189,189) solid 5px;
