--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.scss
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.scss
@@ -29,7 +29,7 @@ $bg-white: white;
 .acfbutton{
   margin-top: 1vh;
   width: 100%;
-  font-size: #00b3ee;
+  color: #00b3ee;
   border-color: #00b3ee;
 
 }
