--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -29,17 +29,17 @@
   <div class="col-12 d-sm-none d-md-block">
     <div class="float-right">
       <div class="socialdiv">
-        <a href="www.instagram.com/suitsandtables/" target="_blank">
+        <a href="https://www.instagram.com/suitsandtables" target="_blank">
         <fa name="instagram" size="2x"></fa>
         </a>
       </div>
       <div class="socialdiv">
-        <a href="www.facebook.com/suitsandtables/" target="_blank">
+        <a href="https://www.facebook.com/suitsandtables" target="_blank">
         <fa name="facebook-f" size="2x"></fa>
         </a>
       </div>
       <div class="socialdiv">
-        <a href="www.twitter.com/suitsandtables?lang=en" target="_blank">
+        <a href="https://www.twitter.com/suitsandtables?lang=en" target="_blank">
         <fa name="twitter" size="2x"></fa>
         </a>
       </div>
