--- a/src/app/mainroot/venuepage/venuepage.component.html
+++ b/src/app/mainroot/venuepage/venuepage.component.html
@@ -108,7 +108,7 @@
 
   <div id="VenueMenu" class="Section">
     <span class="SecHead span-style__lg">
-      Sample Menus
+      Menus + Packages
     </span>
     <br>
     <br>
