--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -65,7 +65,7 @@
 <br>
 <hr>
 <div class="row justify-content-start"> <!--sample menu pdf row-->
-  <h5><strong>Sample Menus:</strong></h5>
+  <h5><strong>Menus + Packages:</strong></h5>
   <div class="col-2" id="menulogohelpertext">
     must be in pdf form
   </div>
