--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
@@ -34,7 +34,7 @@
         <div *ngIf="venueobject.venuefullbuyoutphoto_set.length > 0" (click)="navigatetofullbuyout()" style="cursor: pointer" class="imagecontainer"
              [ngStyle]="{'background-image': 'url(' + venueobject.venuefullbuyoutphoto_set[0].imageurl +')'}">
         </div> <!--imagecontainer-->
-        <div *ngIf="venueobject.venueimage_set.length < 1" (click)="navigatetofullbuyout()" style="cursor: pointer" class="imagecontainer">
+        <div *ngIf="venueobject.venuefullbuyoutphoto_set.length < 1" (click)="navigatetofullbuyout()" style="cursor: pointer" class="imagecontainer">
           <br>
           <h4 class="text-center">No Photo Uploaded</h4>
         </div>
