--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -6,7 +6,7 @@
           <h5><strong>Venue Photos &nbsp;</strong><button class="btn btn-outline-primary" *ngIf="!showphotoupload" (click)="venuephotodisplaytoggle()">+Add Photo</button> &nbsp;</h5>
         </div>
         <div class="col-2">
-          <button class="btn-outline-success" *ngIf="!showphotos && !showphotoupload" (click)="venuephotoshowtoggle()">Display Photos</button>
+          <button class=" btn btn-outline-success" *ngIf="!showphotos && !showphotoupload" (click)="venuephotoshowtoggle()">Display Photos</button>
         </div>
       </div>
     </div>
