--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -89,11 +89,10 @@
       </div>
       <div *ngIf="!fullbuyoutroomactive && room.seatedcapacity == null" id="Seat" class="col-auto roommain"> N/A seated |
       </div>
-      <div *ngIf="fullbuyoutroomactive && venue.fullbuyoutseatedcapacity != null" id="Seat" class="col-auto roommain"> {{ venue.fullbuyoutseatedcapacity }} seated |
-      </div>
+      <div *ngIf="fullbuyoutroomactive && venue.fullbuyoutseatedcapacity != null" id="Seat" class="col-auto roommain"> {{ venue.fullbuyoutseatedcapacity }} seated |</div>
       <div *ngIf="fullbuyoutroomactive && venue.fullbuyoutseatedcapacity == null" id="Seat" class="col-auto roommain"> N/A seated |
       </div>
-      <div *ngIf="!fullbuyoutroomactive && room.standingcapacity != null" id="Stand" class="col-auto roommain"> {{ room.standingcapacity }} standing  </div>
+      <div *ngIf="!fullbuyoutroomactive && room.standingcapacity != null" id="Stand" class="col-auto roommain">{{ room.standingcapacity }} standing  </div>
       <div *ngIf="!fullbuyoutroomactive && room.standingcapacity == null" id="Stand" class="col-auto roommain"> N/A standing </div>
       <div *ngIf="fullbuyoutroomactive && venue.fullbuyoutstandingcapactiy != null" id="Stand" class="col-auto roommain"> {{ venue.fullbuyoutstandingcapactiy }} standing </div>
       <div *ngIf="fullbuyoutroomactive && venue.fullbuyoutstandingcapactiy == null" id="Stand" class="col-auto roommain"> N/A standing </div>
@@ -177,7 +176,7 @@
     </div>
   </div>
 
-  <div id="OtherRooms" class="Section">
+  <div *ngIf="(!fullbuyoutroomactive && venue.fullbuyoutonline) || otherrooms.length > 0" id="OtherRooms" class="Section">
     <div class="SecHead">View More Rooms</div>
     <div class="row">
       <div *ngIf="!fullbuyoutroomactive && venue.fullbuyoutonline" class="col-sm-12 col-md-6 col-lg-4 pb-4">
@@ -198,6 +197,7 @@
             </div>
 
             <p class="card-container-information__sub">
+              <span class="card-container-information__sub--food">Private</span>
               <span *ngIf="venue.fullbuyoutseatedcapacity != null" id="seat-number" class="card-container-information__sub--price">{{ venue.fullbuyoutseatedcapacity }} Seated</span>
               <span *ngIf="venue.fullbuyoutseatedcapacity == null" id="seat-number" class="card-container-information__sub--price">N/A Seated</span>
               <span *ngIf="venue.fullbuyoutstandingcapactiy != null" id="stand-number" class="card-container-information__sub--room">{{ venue.fullbuyoutstandingcapactiy }} Standing</span>
